[tool.poetry]
name = "dog-stress-inf"
version = "0.1.0"
description = ""
authors = ["magisystem0408 <masato.matsudo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.0"
torchvision = "^0.19.0"
mlflow = "^2.15.1"
efficientnet-pytorch = "^0.7.1"
setuptools = "^73.0.1"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
